--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Amazing places in Japan</title>
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
   </head>
   <body>
     <!--Header start-->
@@ -157,7 +157,7 @@
           <div class="places__cards">
             <figure class="places__card places__card_size_lg">
               <img
-                src="./img/place-1.jpg"
+                src="./img/place-1-min.jpg"
                 alt="Mount Fuji"
                 class="places__card-pic places__card-pic_size_lg"
               />
@@ -167,7 +167,7 @@
 
             <figure class="places__card places__card_size_lg">
               <img
-                src="./img/place-2.jpg"
+                src="./img/place-2-min.jpg"
                 alt="Kyoto"
                 class="places__card-pic places__card-pic_size_lg"
               />
@@ -177,7 +177,7 @@
 
             <figure class="places__card places__card_size_sm">
               <img
-                src="./img/place-3.jpg"
+                src="./img/place-3-min.jpg"
                 alt="Tokyo"
                 class="places__card-pic places__card-pic_size_sm"
               />
@@ -186,7 +186,7 @@
             </figure>
             <figure class="places__card places__card_size_sm">
               <img
-                src="./img/place-4.jpg"
+                src="./img/place-4-min.jpg"
                 alt="Niigata"
                 class="places__card-pic places__card-pic_size_sm"
               />
@@ -195,7 +195,7 @@
             </figure>
             <figure class="places__card places__card_size_sm">
               <img
-                src="./img/place-5.jpg"
+                src="./img/place-5-min.jpg"
                 alt="KSapporo"
                 class="places__card-pic places__card-pic_size_sm"
               />
@@ -214,7 +214,7 @@
           <div class="tours__tour tour">
             <div class="tour__pic">
               <img
-                src="./img/tour-1.jpg"
+                src="./img/tour-1-min.jpg"
                 alt="Prefecture in Focus: Tottori"
                 class="tour__thumb"
               />
@@ -247,7 +247,7 @@
             </div>
             <div class="tour__pic tour__pic_mob-first">
               <img
-                src="./img/tour-2.jpg"
+                src="./img/tour-2-min.jpg"
                 alt="Featured Neighborhood: Kyoto’s Arashiyama"
                 class="tour__thumb"
               />
@@ -267,7 +267,7 @@
             <div class="top__card">
               <div class="top__card-pic">
                 <img
-                  src="./img/top-pic-1.jpg"
+                  src="./img/top-pic-1-min.jpg"
                   alt="NAGOYA"
                   class="top__card-thumb"
                 />
@@ -291,7 +291,7 @@
             <div class="top__card">
               <div class="top__card-pic">
                 <img
-                  src="./img/top-pic-2.jpg"
+                  src="./img/top-pic-2-min.jpg"
                   alt="NIIGATA"
                   class="top__card-thumb"
                 />
@@ -315,7 +315,7 @@
             <div class="top__card">
               <div class="top__card-pic">
                 <img
-                  src="./img/top-pic-3.jpg"
+                  src="./img/top-pic-3-min.jpg"
                   alt="OSAKA"
                   class="top__card-thumb"
                 />
@@ -339,7 +339,7 @@
             <div class="top__card">
               <div class="top__card-pic">
                 <img
-                  src="./img/top-pic-4.jpg"
+                  src="./img/top-pic-4-min.jpg"
                   alt="SAITAMA"
                   class="top__card-thumb"
                 />
@@ -363,7 +363,7 @@
             <div class="top__card">
               <div class="top__card-pic">
                 <img
-                  src="./img/top-pic-5.jpg"
+                  src="./img/top-pic-5-min.jpg"
                   alt="UENO"
                   class="top__card-thumb"
                 />
@@ -387,7 +387,7 @@
             <div class="top__card">
               <div class="top__card-pic">
                 <img
-                  src="./img/top-pic-6.jpg"
+                  src="./img/top-pic-6-min.jpg"
                   alt="SHIBUYA"
                   class="top__card-thumb"
                 />
@@ -421,7 +421,6 @@
           <iframe
             class="video__element"
             src="https://www.youtube.com/embed/URDXZSJZ2ME"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -495,6 +494,6 @@
         </div>
       </div>
     </footer>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.min.js"></script>
   </body>
 </html>
