--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Amazing places in Japan</title>
-    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
   </head>
   <body>
@@ -155,53 +154,53 @@
             <a href="#" class="places__view-all"> VIEW ALL </a>
           </div>
           <div class="places__cards">
-            <figure class="places__card places__card_size_lg">
+            <div class="places__card places__card_size_lg">
               <img
                 src="./img/place-1-min.jpg"
                 alt="Mount Fuji"
                 class="places__card-pic places__card-pic_size_lg"
               />
-              <figcaption class="places__card-title">Mount Fuji</figcaption>
+              <h3 class="places__card-title">Mount Fuji</h3>
               <a href="#" class="places__card-link"></a>
-            </figure>
+            </div>
 
-            <figure class="places__card places__card_size_lg">
+            <div class="places__card places__card_size_lg">
               <img
                 src="./img/place-2-min.jpg"
                 alt="Kyoto"
                 class="places__card-pic places__card-pic_size_lg"
               />
-              <figcaption class="places__card-title">Kyoto</figcaption>
+              <h3 class="places__card-title">Kyoto</h3>
               <a href="#" class="places__card-link"></a>
-            </figure>
+            </div>
 
-            <figure class="places__card places__card_size_sm">
+            <div class="places__card places__card_size_sm">
               <img
                 src="./img/place-3-min.jpg"
                 alt="Tokyo"
                 class="places__card-pic places__card-pic_size_sm"
               />
-              <figcaption class="places__card-title">Tokyo</figcaption>
+              <h3 class="places__card-title">Tokyo</h3>
               <a href="#" class="places__card-link"></a>
-            </figure>
-            <figure class="places__card places__card_size_sm">
+            </div>
+            <div class="places__card places__card_size_sm">
               <img
                 src="./img/place-4-min.jpg"
                 alt="Niigata"
                 class="places__card-pic places__card-pic_size_sm"
               />
-              <figcaption class="places__card-title">Niigata</figcaption>
+              <h3 class="places__card-title">Niigata</h3>
               <a href="#" class="places__card-link"></a>
-            </figure>
-            <figure class="places__card places__card_size_sm">
+            </div>
+            <div class="places__card places__card_size_sm">
               <img
                 src="./img/place-5-min.jpg"
                 alt="KSapporo"
                 class="places__card-pic places__card-pic_size_sm"
               />
-              <figcaption class="places__card-title">Sapporo</figcaption>
+              <h3 class="places__card-title">Sapporo</h3>
               <a href="#" class="places__card-link"></a>
-            </figure>
+            </div>
           </div>
         </div>
       </section>
