--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   type="text"
                   name="user-like-to-go"
                   class="search-form__field"
-                  placeholder="Where would you like to go??"
+                  placeholder="Where would you like to go?"
                 />
                 <button type="submit" class="search-form__submit">
                   search
